增加1.商品详情 2.商品搜索 3.订单查询 4.订单增量查询 5.推广链接生成接口

--- a/Mango.PDD.DDJB.csproj
+++ b/Mango.PDD.DDJB.csproj
@@ -4,8 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>D:\Work\C#Work\pdd_ddjb_dotnet_sdk\Mango.PDD.DDJB\Mango.PDD.DDJB.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
-    <Folder Include="src\" />
+    <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
 
 </Project>
