Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,6 +33,10 @@ stages:
 
     steps:
     - task: NuGetToolInstaller@1
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '2.2.x'
     - task: NuGetCommand@2
       inputs:
         restoreSolution: $(solution)
@@ -51,6 +55,10 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+    - task: UseDotNet@2
+      inputs:
+        packageType: 'sdk'
+        version: '2.2.x'
     - task: DotNetCoreCLI@2
       inputs:
         command: restore
